--- a/drivesafenotifier/src/main/res/values/strings.xml
+++ b/drivesafenotifier/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">DriveSafeNotifier</string>
+    <string name="passenger">Im not Driving </string>
+    <string name="msg" tools:ignore="TypographyEllipsis">Using mobile while driving killed an estimated 16,000 people from 2001 to 2007... \n <bold>Stay Safe </bold> </string>
+    <string name="close">Close the App</string>
 </resources>
